# tiktok-personalization

./: .gitignore  Cargo.toml  README.md  tiktok.db
python/: requirements.txt  run.py
python/data/: user_totals.txt
python/db/: __init__.py  helpers.py
python/tiktok/: __init__.py  bot.py
rust/src/: main.rs
rust/src/util/: cli.rs  db.rs  debug.rs  user.rs
src/: api.rs  main.rs  util.rs
src/util/: cli.rs  db.rs  tiktok_helper.rs  twilio_helper.rs  web_helper.rs
