[package]
name = "tiktok-personalization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
hyper = { version = "0.14.25", features = ["full"] }
argon2 = "0.5.0"
rand_core = { version = "0.6", features = ["std"] }
rustyline = "11.0.0"
rusqlite = { version = "0.29.0", features = ["bundled"] }
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
colored = "2.0.0"
