[package]
name = "tiktok-personalization"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.28"
rustyline = "11.0.0"
thirtyfour = "0.31.0"
tokio = { version = "1", features = ["full"] }
rand = "0.8.5"
colored = "2.0.0"
mongodb = "2.5.0"
csv = "1.2.1"
bcrypt = "0.14.0"
futures-util = "0.3.28"
serde = { version = "1.0", features = ["derive"] }
clap = "4.3.0"
shlex = "1.1.0"
